compleated subscribe section

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
   font-family: "Fira Sans", serif;
+  /* border: 0.1px dashed black; */
 }
 body {
   padding: 60px;
@@ -192,8 +193,8 @@ body {
   margin-bottom: 20px;
 }
 .dnt {
-  width: 1280px;
-  height: 48px;
+  /* width: 1280px;
+  height: 48px; */
   font-size: 40px;
   font-weight: bold;
   text-align: center;
@@ -265,4 +266,54 @@ body {
 }
 .tkbtn > .donate-btn:hover {
   border: 1px solid #006a50;
+}
+.newsletter {
+  text-align: center;
+  font-weight: bold;
+  font-size: 40px;
+  /* width: 622px; */
+  height: 48px;
+}
+.growth {
+  font-size: 16px;
+  line-height: 24px;
+  height: 48px;
+  text-align: center;
+}
+.enteremail {
+  width: 600px;
+  /* height: 55px; */
+  padding: 18px 40px;
+  font-weight: 400px;
+  font-size: 18px;
+  outline: none;
+  border: none;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+.subcribe {
+  background-color: #006a50;
+  padding: 17px 34px;
+  width: 150px;
+  color: 400px;
+  font-weight: bold;
+  font-size: 18px;
+  outline: none;
+  border: none;
+  border-top-right-radius: 8px;
+  color: white;
+  border-bottom-right-radius: 8px;
+}
+.subcribe-section {margin-top: 20px;
+  padding: 80px 100px;
+  background-color: #c6e4d6;
+  border-radius: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.promise-spam {
+  font-size: 16px;
+  text-align: center;
 }
