--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
   font-family: "Fira Sans", serif;
-  border: 0.1px dashed black;
+  /* border: 0.1px dashed black; */
   scroll-behavior: smooth;
-  transition: 0.5s;
+  transition: 0.25s;
 }
 body {
-  padding: 60px;
+  /* padding: 60px; */
   background-color: #f1f1f3;
+  margin: 0;
+}
+body > nav,
+section {
+  margin-left: 60px;
+  margin-right: 60px;
 }
 .bng {
   border-radius: 24px;
@@ -266,12 +272,13 @@ body {
 }
 
 .other-amount-btn {
-  width: 1032px;
-  height: 64px;
+  width: 850px;
+  /* height: 64px; */
   padding: 20px 40px 20px 40px;
   font-size: 20px;
   outline: none;
   border: none;
+  text-align: center;
   background-color: white;
   color: #0e0e0e65;
 }
@@ -319,6 +326,7 @@ body {
   font-size: 16px;
   line-height: 24px;
   height: 48px;
+  color: #0e0e0ebf;
   text-align: center;
 }
 .enteremail {
@@ -358,13 +366,14 @@ body {
 .promise-spam {
   font-size: 16px;
   text-align: center;
+  color: #0e0e0ebf;
 }
 .navone {
   font-size: 32px;
   line-height: 0;
   font-weight: bold;
   width: 222px;
-  height: 38px;
+  /* height: 38px; */
 }
 .signbtn {
   font-weight: 400px;
@@ -399,4 +408,67 @@ body {
 
 button {
   cursor: pointer;
+}
+.imgicon {
+  width: 24px;
+  height: 24px;
+}
+.xpng {
+  height: 24px;
+  width: 26px;
+}
+.onlyimg {
+  margin-top: 32px;
+  width: 120px;
+  height: 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: centers;
+}
+.byebye {
+  font-size: 32px;
+  width: 222px;
+  height: 38px;
+  font-weight: bold;
+}
+.fotter {
+  padding: 50px 160px;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  margin-top: 80px;
+}
+.imgicon {
+  cursor: pointer;
+}
+.imgicon:hover {
+  transform: scale(1.2);
+}
+
+.vision-quote {
+  padding: 48px 24px;
+  background-color: white;
+  border-radius: 16px;
+  margin-top: 32px;
+  margin-bottom: 80px;
+  position: relative;
+}
+.qoute-desc {
+  font-size: 16px;
+  line-height: 24px;
+}
+.author {
+  font-size: 20px;
+  font-weight: 500;
+}
+.author-proff {
+  font-size: 16px;
+}
+.data-sec > p {
+  line-height: 5px;
+}
+.quote-img {
+  position: absolute;
 }
